increased width of speed indication ui-element to avoid layout breaking on some linux-browsers

--- a/branches/10/webui/style.css
+++ b/branches/10/webui/style.css
@@ -225,7 +225,7 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
 	margin-right: 10px;
 	padding-top: 2px;
 	cursor: pointer;
-	width: 85px;
+	width: 86px;
 }
 
 #InfoBlock div {
